@@ -12,6 +12,16 @@
     <packaging>war</packaging>
     <name>tgol-web-app</name>
     <dependencies>
+<!--        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.14</version>
+            <scope>compile</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
         <!-- tgol dependencies-->
         <dependency>
             <groupId>${webappGroupId}</groupId>
@@ -49,6 +59,10 @@
         <dependency>
             <groupId>${engineGroupId}</groupId>
             <artifactId>tanaguru-engine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opens</groupId>
+            <artifactId>tanaguru-jms</artifactId>
         </dependency>
         <dependency>
             <groupId>${engineGroupId}</groupId>
@@ -118,11 +132,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-instrument</artifactId>
         </dependency>
-        <!--        <dependency>
+        <!--       <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-instrument-tomcat</artifactId>
         </dependency>-->
-        <!--        <dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
@@ -133,7 +147,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
@@ -146,6 +160,16 @@
         </dependency>
 
         <!-- hibernate dependencies -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <!--            <scope>runtime</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.9.1</version>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
@@ -260,6 +284,26 @@
                     <failOnWarning>false</failOnWarning>
                 </configuration>
             </plugin>
+<!--            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <path>/tgol</path>
+                    <port>8182</port>
+                    <systemProperties>
+                        <WEB-APP-URL>http://$host:$port/tgol</WEB-APP-URL>
+                        <CONFIG_TANAGURU >$path_to_tgol_conf_dir\tanaguru</CONFIG_TANAGURU >
+                        <test.key>true</test.key>
+                        <MAVEN_OPTS>-Xms512m -Xmx512m -XX:PermSize=512m
+                            -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</MAVEN_OPTS>
+                    </systemProperties>
+                    <server>tomcat</server>
+                    <warFile>${project.build.directory}/${project.build.finalName}.war</warFile>
+                    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+                    <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
+                </configuration>
+            </plugin>-->
         </plugins>
         <finalName>tgol-web-app-${webappVersion}</finalName>
     </build>
